# rust-vue-sfc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: parse.rs
src/: error.rs  lib.rs
src/ast/: error.rs  mod.rs  raw.rs  section.rs
src/ast/block/: mod.rs  name.rs
src/ast/block/attribute/: mod.rs  name.rs  value.rs
src/parser/: error.rs  mod.rs  util.rs
