[package]
name = "vue-sfc"
description = "A parser for Vue SFC."
version = "0.3.0"
authors = ["Maël Obréjan <mael.obrejan@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/malobre/rust-vue-sfc"
readme = "README.md"
keywords = ["vue", "sfc"]
include = ["src/**/*", "Cargo.toml", "LICENSE"]

[dependencies]
nom = "7.1"

[dev-dependencies]
criterion = "0.3.5"
pprof = { version = "0.6.2", features = ["flamegraph", "criterion"] }

[[bench]]
name = "parse"
harness = false
